# uavModel

./: IronTitan_BOM_July16_TD.xlsx  README.md  SLP_Presentation_Aug2.pptx  angular_acceleration_calculation.m  baskarModel.slx  batteryModel.mlx  bldcModel.slx  calc_angular_acceleration.m  calc_linear_acceleration.m  calc_thrust_torque_current.m  control_input.m  esc_motor_model_r2017a.slx  flight_trajectory.mat  generate_gust_drag.m  motorModel.slx  newBLDCmodel.slx  newBLDCmodel_r2018a.slx  poster.pptx  rotational_acceleration_calculation.m  simplifiedMotorModel.slx  to_target.mat  uavModel.slx
battery/: E2model2RC.mat  SFB__battery_simulator__SFB.mat  batteryModel.mat  batteryModel.mlx  batteryModel2.mat  batteryModelFinal2019a.slxc  batteryModelNew.mat  batteryModelSimulink.slx  current.mat  currentUAV.mat  soc_ocv_new.mat
batteryNASA/: batteryNASAslx.slx  batteryNASAslx.slxc
complete_full/: DJI4114_400kv_BLDC_Motor.mat  Dynamics.m  IC_HoverAt10ftOcto.mat  IC_HoverAt10ftOctoWithMotorControl.mat  battery.mat  batteryModel_Sfcn.m  complete.slx  complete.slx.r2018a  complete.slxc  controllers.mat  octoModel.mat  time_sim.mlx
motorModels/: BLDC_PI.mdl  BLDC_speed_control.mdl  BLDC_speed_control.slxc  bldcModel_r2017a.slx  newBLDCmodel.slx  newBLDCmodel_r2018a.slx  simplifiedMotorModel.slx  simplifiedMotorModel.slxc
newSystemModel/: AC_Quadcopter_Simulation.slxc  DJI_Quadcopter_Simulation.slxc  motor.mat
newSystemModelMine/: Copy_of_fullSimPrognostics.mlx  MavicProComplete.slx  MavicProComplete.slxc  MavicProComplete_oct22.slx  MavicProComplete_oct22.slxc  fullSimNominal.mlx  fullSimPrognostics.mlx  motorResults.mat  quadcopterDynamicsSFunctionMod.m
pdfs/: State space equations of the motor explained.docx  poster.pptx
simFiles/: MavicProComplete.slx  MavicProComplete.slxc  MavicProComplete_2018a.slx.r2018a  MavicProComplete_2018a.slxc  MavicProComplete_oct22.slxc  fullSimExperimentsFaulty.mlx  fullSimExperiments_faultyMotor.mlx  (+4 more)
simulator/GazeboPlugin/: CMakeLists.txt  GazeboDifferentialDriveControl.slx  Gazebo_Simulink_Test.ipynb  gazebo_cosim_test.slx  gazebo_cosim_test.slxc  gazebo_simulink_uav_experiment.mlx  helperPlotImage.m  performCoSimulationWithGazebo.slxc  run_sim.m  run_sim.sh
simulator/GazeboPlugin/.ipynb_checkpoints/: Gazebo_Simulink_Test-checkpoint.ipynb
simulator/GazeboPlugin/export/include/gazebotransport/: Callback.hpp  Client.hpp  GazeboClient.hpp  PacketEnding.hpp  Server.hpp
simulator/GazeboPlugin/include/gazebotransport/gazeboplugin/: GazeboPlugin.hpp
simulator/GazeboPlugin/include/gazebotransport/gazeboserver/: GazeboServerCallback.hpp  GazeboWorldImpl.hpp  GazeboWorldInterface.hpp  MsgDispatcher.hpp  MsgHandler.hpp  RequestCoSimulationHandler.hpp  StopCoSimulationHandler.hpp
simulator/GazeboPlugin/include/gazebotransport/gazeboserver/gazeboapply/: GazeboApplyCommander.hpp
simulator/GazeboPlugin/include/gazebotransport/gazeboserver/gazebomsghandler/: ApplyJointTorqueMsgHandler.hpp  ApplyLinkWrenchMsgHandler.hpp  GazeboUtils.hpp  GetImageMsgHandler.hpp  GetImuMsgHandler.hpp  GetLaserMsgHandler.hpp  GetModelInfoMsgHandler.hpp  GetPoseMsgHandler.hpp  GetTopicListMsgHandler.hpp  JointPtrStorage.hpp  LinkPtrStorage.hpp  MaxSimulationStepMsgHandler.hpp  ResetSimulationMsgHandler.hpp  StepSimulationMsgHandler.hpp  SubscribeImageMsgHandler.hpp  SubscribeImuMsgHandler.hpp  SubscribeLaserMsgHandler.hpp  SubscribeMsgHandler.hpp  SubscribeMsgManager.hpp
simulator/GazeboPlugin/include/gazebotransport/gazeboserver/gazebosensors/: GazeboCameraSensor.hpp  GazeboIMUSensor.hpp  GazeboLaserSensor.hpp  GazeboSensorSubscriber.hpp  SensorContainer.hpp
simulator/GazeboPlugin/include/gazebotransport/transport/: Connection.hpp  ConnectionManager.hpp  readWithTimeout.hpp
simulator/GazeboPlugin/msgsproto/: CMakeLists.txt  CoSimMsgs.proto  TestMsgs.proto  robotics.gazebotransport.CoSimMsgs.pb.cc  robotics.gazebotransport.CoSimMsgs.pb.h  robotics.gazebotransport.CoSimMsgs.proto
simulator/GazeboPlugin/slprj/sim/varcache/gazebo_cosim_test/: checksumOfCache.mat  varInfo.mat
simulator/GazeboPlugin/slprj/sim/varcache/gazebo_cosim_test/tmwinternal/: simulink_cache.xml
simulator/GazeboPlugin/slprj/sim/varcache/performCoSimulationWithGazebo/: checksumOfCache.mat  varInfo.mat
simulator/GazeboPlugin/slprj/sim/varcache/performCoSimulationWithGazebo/tmwinternal/: simulink_cache.xml
simulator/GazeboPlugin/src/gazeboplugin/: CMakeLists.txt  GazeboPlugin.cpp
simulator/GazeboPlugin/src/gazeboplugin/pkgtest/: CMakeLists.txt  forceTest.cpp  pluginTest.cpp
simulator/GazeboPlugin/src/gazeboserver/: CMakeLists.txt  GazeboServer.cpp  GazeboServerCallback.cpp  GazeboWorldImpl.cpp  MsgDispatcher.cpp  RequestCoSimulationHandler.cpp  StopCoSimulationHandler.cpp
simulator/GazeboPlugin/src/gazeboserver/gazeboapply/: GazeboApplyCommander.cpp
simulator/GazeboPlugin/src/gazeboserver/gazebomsghandler/: ApplyJointTorqueMsgHandler.cpp  ApplyLinkWrenchMsgHandler.cpp  GetImageMsgHandler.cpp  GetImuMsgHandler.cpp  GetLaserMsgHandler.cpp  GetModelInfoMsgHandler.cpp  GetPoseMsgHandler.cpp  GetTopicListMsgHandler.cpp  MaxSimulationStepMsgHandler.cpp  ResetSimulationMsgHandler.cpp  StepSimulationMsgHandler.cpp  SubscribeImageMsgHandler.cpp  SubscribeImuMsgHandler.cpp  SubscribeLaserMsgHandler.cpp  SubscribeMsgHandler.cpp  SubscribeMsgManager.cpp
simulator/GazeboPlugin/src/gazeboserver/gazebomsghandler/pkgtest/: CMakeLists.txt  applyJointTorqueHandlerTest.cpp  applyLinkWrenchHandlerTest.cpp  getModelInfoHandlerTest.cpp  getPoseHandlerTest.cpp  getTopicHandlerTest.cpp  imageHandlerTest.cpp  imuHandlerTest.cpp  laserHandlerTest.cpp  maxStepSizeHandlerTest.cpp
simulator/GazeboPlugin/src/gazeboserver/gazebosensors/: GazeboCameraSensor.cpp  GazeboIMUSensor.cpp  GazeboLaserSensor.cpp  GazeboSensorSubscriber.cpp  SensorContainer.cpp
simulator/GazeboPlugin/src/transport/: Client.cpp  Connection.cpp  readWithTimeout.cpp
simulator/GazeboPlugin/world/: differentialDriveRobot.world  imuSimple.world  multiSensorNoNoisePluginTest.world  multiSensorPluginTest.world  uavSimple.world
(+1271 files in other folders)
